--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,9 +25,9 @@ httpx==0.25.2
 aiohttp==3.9.1
 aiofiles==23.2.1
 
-# CrewAI and AI agent framework
-crewai==0.1.55
-crewai-tools==0.1.6
+# CrewAI and AI agent framework  
+crewai==0.175.0
+crewai-tools
 
 # AI and ML libraries
 openai==1.3.7
